--- a/PLANT_PPE/Views/Setting/AccountProfile.cshtml
+++ b/PLANT_PPE/Views/Setting/AccountProfile.cshtml
@@ -1,26 +1,26 @@
 ﻿
 @{
-    ViewBag.Title = "District";
-    ViewBag.JS = "/Scripts/Page/SettingDistrict.js";
+    ViewBag.Title = "User";
+    ViewBag.JS = "/Scripts/Page/SettingAccountProfile.js";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="content-heading">Setting District</h2>
+<h2 class="content-heading">Setting Account Profile</h2>
 <div class="block block-rounded">
     <div class="block-header block-header-default">
         <h3 class="block-title">
-            Table District <small>Set District Group</small>
+            Table Account Profile <small>Set Account Profile's</small>
         </h3>
         <div class="block-options">
             <div class="block-options-item">
                 <button type="button" class="btn btn-success py-2 mb-0" data-bs-toggle="modal" data-bs-target="#modal-insert">
-                    <i class="fa fa-add opacity-50 me-1"></i> Add District
+                    <i class="fa fa-add opacity-50 me-1"></i> Add Account Profile
                 </button>
             </div>
         </div>
     </div>
     <div class="block-content block-content-full">
-        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_district">
+        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="tbl_accprofile">
             <thead class="text-center">
                 <tr>
                     <th>ACCOUNT PROFILE</th>
@@ -40,7 +40,7 @@
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
-                    <h3 class="block-title">Register User's Group</h3>
+                    <h3 class="block-title">Register Account Profile</h3>
                     <div class="block-options">
                         <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
                             <i class="fa fa-times"></i>
@@ -49,26 +49,26 @@
                 </div>
                 <div class="block-content fs-sm">
                     <div class="mb-4">
-                        <label class="form-label" for="txt_acctprofile">Account Profile</label>
-                        <input type="text" class="form-control" id="txt_acctprofile" name="txt_acctprofile">
+                        <label class="form-label" for="txt_accprofile">Account Profile</label>
+                        <input type="email" class="form-control" id="txt_accprofile" name="txt_accprofile">
                     </div>
                     <div class="mb-4">
-                        <label class="form-label" for="txt_dstrct">DISTRICT</label>
-                        <select class="js-select2 form-select select2-modal" id="txt_dstrct" name="txt_dstrct" style="width: 100%;">
+                        <label class="form-label" for="txt_district">District</label>
+                        <select class="js-select2 form-select select2-modal" id="txt_district" name="txt_district" style="width: 100%;">
                             <option></option>
-                            @foreach (var item in ViewBag.dstrct)
+                            @foreach (var item in ViewBag.DistrictLoc)
                             {
                                 <option value="@item.DSTRCT_CODE">@item.DSTRCT_CODE</option>
                             }
                         </select>
                     </div>
                     <div class="mb-4">
-                        <label class="form-label" for="txt_location">LOCATION</label>
+                        <label class="form-label" for="txt_location">Location</label>
                         <select class="js-select2 form-select select2-modal" id="txt_location" name="txt_location" style="width: 100%;">
                             <option></option>
-                            @foreach (var item in ViewBag.loc)
+                            @foreach (var item in ViewBag.DistrictLoc)
                             {
-                                <option value="@item.TABLE_CODE">@item.TABLE_CODE</option>
+                                <option value="@item.EQUIP_LOCATION">@item.EQUIP_LOCATION</option>
                             }
                         </select>
                     </div>
@@ -77,7 +77,7 @@
                     <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="button" class="btn btn-alt-primary" onclick="insertDistrict()">
+                    <button type="button" class="btn btn-alt-primary" onclick="insertUser()">
                         Insert
                     </button>
                 </div>
@@ -86,13 +86,13 @@
     </div>
 </div>
 
-@*Modal Update acct*@
+@*Modal Update source*@
 <div class="modal" id="modal_update" tabindex="-1" aria-labelledby="modal-normal" aria-modal="true" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
                 <div class="block-header block-header-default">
-                    <h3 class="block-title">Edit Account, District dan Location</h3>
+                    <h3 class="block-title">Edit Account Profile</h3>
                     <div class="block-options">
                         <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
                             <i class="fa fa-times"></i>
@@ -102,17 +102,9 @@
                 <div class="block-content fs-sm">
                     <div class="mb-4">
                         <input type="text" name="txt_id" id="txt_id" hidden />
-                        <label class="form-label" for="txt_accountprofile_update">ACCOUNT PROFILE</label>
-                        <input type="text" class="form-control" id="txt_accountprofile_update" name="txt_accountprofile_update">
-                    </div>
-                </div>
-                <div class="block-content fs-sm">
-                    <div class="mb-4">
                         <label class="form-label" for="txt_distrik_update">DISTRICT</label>
                         <input type="text" class="form-control" id="txt_distrik_update" name="txt_distrik_update">
                     </div>
-                </div>
-                <div class="block-content fs-sm">
                     <div class="mb-4">
                         <label class="form-label" for="txt_lokasi_update">LOCATION</label>
                         <input type="text" class="form-control" id="txt_lokasi_update" name="txt_lokasi_update">
@@ -122,7 +114,7 @@
                     <button type="button" class="btn btn-alt-secondary" data-bs-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="button" class="btn btn-alt-primary" onclick="updateAccountDL()">
+                    <button type="button" class="btn btn-alt-primary" onclick="updateSurce()">
                         Insert
                     </button>
                 </div>
